--- a/django-models/LibraryProject/relationship_app/templates/list_books.html
+++ b/django-models/LibraryProject/relationship_app/templates/list_books.html
@@ -1,16 +1,12 @@
-<!-- list_books.html -->
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>List of Books</title>
-</head>
+<html>
+<head><title>List of Books</title></head>
 <body>
-    <h1>Books Available:</h1>
-    <ul>
-        {% for book in books %}
-        <li>{{ book.title }} by {{ book.author.name }}</li>
-        {% endfor %}
-    </ul>
+  <h1>Books Available:</h1>
+  <ul>
+    {% for book in books %}
+      <li>{{ book.title }} by {{ book.author.name }}</li>
+    {% endfor %}
+  </ul>
 </body>
 </html>
