--- a/django_blog/blog/templates/blog/base.html
+++ b/django_blog/blog/templates/blog/base.html
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>{% block title %}Auth System{% endblock %}</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'blog/css/auth.css' %}">
-</head>
-<body>
+    <link rel="stylesheet" href="{% static 'blog/css/auth.css' %}" />
+  </head>
+  <body>
+    <nav>
+      <a href="{% url 'blog:post-list' %}">Blog</a>
+      {% if user.is_authenticated %}
+      <a href="{% url 'blog:post-create' %}">New Post</a>
+      <a href="{% url 'accounts:profile' %}">Profile</a>
+      <a href="{% url 'login' %}">Logout</a>
+      {% else %}
+      <a href="{% url 'login' %}">Login</a>
+      {% endif %}
+    </nav>
 
-<div class="container">
-    {% if messages %}
-        <div class="messages">
-            {% for message in messages %}
-                <div class="alert {{ message.tags }}">
-                    {{ message }}
-                </div>
-            {% endfor %}
-        </div>
-    {% endif %}
-
-    {% block content %}{% endblock %}
-</div>
-
-</body>
+    <div class="container">
+      {% if messages %}
+      <div class="messages">
+        {% for message in messages %}
+        <div class="alert {{ message.tags }}">{{ message }}</div>
+        {% endfor %}
+      </div>
+      {% endif %} {% block content %}{% endblock %}
+    </div>
+  </body>
 </html>
