--- a/django_blog/blog/templates/blog/base.html
+++ b/django_blog/blog/templates/blog/base.html
@@ -11,10 +11,10 @@
       <a href="{% url 'blog:post-list' %}">Blog</a>
       {% if user.is_authenticated %}
       <a href="{% url 'blog:post-create' %}">New Post</a>
-      <a href="{% url 'accounts:profile' %}">Profile</a>
-      <a href="{% url 'login' %}">Logout</a>
+      <a href="{% url 'blog:profile' %}">Profile</a>
+      <a href="{% url 'blog:logout' %}">Logout</a>
       {% else %}
-      <a href="{% url 'login' %}">Login</a>
+      <a href="{% url 'blog:login' %}">Login</a>
       {% endif %}
     </nav>
 
