--- a/django_blog/blog/templates/blog/register.html
+++ b/django_blog/blog/templates/blog/register.html
@@ -25,6 +25,6 @@
 
 <p>
     Already have an account?  
-    <a href="{% url 'login' %}">Login</a>
+    <a href="{% url 'blog:login' %}">Login</a>
 </p>
 {% endblock %}
