--- a/django_blog/blog/templates/blog/base.html
+++ b/django_blog/blog/templates/blog/base.html
@@ -4,15 +4,23 @@
     <meta charset="UTF-8" />
     <title>{% block title %}Auth System{% endblock %}</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'blog/css/auth.css' %}" />
+    <link rel="stylesheet" href="{% static 'blog/css/base.css' %}" />
+    {% block extra_css %} {% endblock %}
   </head>
   <body>
     <nav>
-      <a href="{% url 'blog:post-list' %}">Blog</a>
+      <a class="nav_" href="{% url 'blog:post-list' %}">Blog</a>
       {% if user.is_authenticated %}
-      <a href="{% url 'blog:post-create' %}">New Post</a>
-      <a href="{% url 'blog:profile' %}">Profile</a>
-      <a href="{% url 'blog:logout' %}">Logout</a>
+      <a class="nav_" href="{% url 'blog:post-create' %}">New Post</a>
+      <a class="nav_" href="{% url 'blog:profile' username=user.username %}">Profile</a>
+      <form
+        method="post"
+        action="{% url 'blog:logout' %}"
+        style="display: inline"
+      >
+        {% csrf_token %}
+        <button type="submit">Logout</button>
+      </form>
       {% else %}
       <a href="{% url 'blog:login' %}">Login</a>
       {% endif %}
@@ -24,10 +32,6 @@
         {% for message in messages %}
         <div class="alert {{ message.tags }}">{{ message }}</div>
         {% endfor %}
-        <form method="GET" action="{% url 'search-posts' %}">
-          <input type="text" name="q" placeholder="Search posts..." />
-          <button type="submit">Search</button>
-        </form>
       </div>
       {% endif %} {% block content %}{% endblock %}
     </div>
