--- a/django_blog/blog/templates/blog/comment_form.html
+++ b/django_blog/blog/templates/blog/comment_form.html
@@ -7,7 +7,8 @@
   {% csrf_token %}
   {{ form.as_p }}
   <button type="submit">Save Changes</button>
+  
+  <a href="{{ object.post.get_absolute_url }}"
+  style="text-decoration: none; font-weight: bold; background-color: rgb(232, 114, 114); padding: 11px; border-radius: 10px; color: black; margin-left: 20px;">Cancel</a>
 </form>
-
-<a href="{{ object.post.get_absolute_url }}">Cancel</a>
 {% endblock %}
