--- a/django_blog/blog/templates/blog/post_detail.html
+++ b/django_blog/blog/templates/blog/post_detail.html
@@ -1,5 +1,31 @@
-{% extends "blog/base.html" %} {% block title %}{{ post.title }}{% endblock %}
+{% extends "blog/base.html" %} 
+
+{% load static %}
+
+{% block title %}
+{{ post.title }}
+{% endblock %}
+
+{% block extra_css %}
+<link rel="stylesheet" href="{% static 'blog/css/post_detail.css' %}">
+{% endblock %}
+
 {% block content %}
+
+<li class="post-item">
+    <img
+      src="{% if post.photo %}{{ post.photo.url }} {% endif %}"
+      width="300"
+      style="border-radius: 5px"
+    />
+    <h2>{{ post.title|title }}</h2>
+    <p class="paragraph">{{ post.content|truncatechars:200 }}</p>
+    <p class="meta">
+      By <a href="{% url 'blog:profile' username=post.author.username %}" class="link">{{ post.author.username }}</a> <br>
+      <span class="post-date">{{ post.created_at|date:"F j, Y, g:i a" }}</span> 
+    </p>
+  </li>
+
 <hr />
 <h3>Comments</h3>
 
@@ -12,12 +38,12 @@
   <p>{{ comment.content|linebreaks }}</p>
 
   {% if user == comment.author %}
-  <a href="{% url 'blog:comment-edit' comment.pk %}">Edit</a> |
+  <a href="{% url 'blog:comment-edit' comment.pk %}" class="edit">Edit</a> |
   <a href="{% url 'blog:comment-delete' comment.pk %}">Delete</a>
   {% endif %}
 </div>
 {% empty %}
-<p>
+<p class="tags-section">
     <strong>Tags:</strong>
     {% for tag in post.tags.all %}
         <a href="{% url 'posts-by-tag' tag.name %}">
@@ -29,13 +55,12 @@
 </p>
 <p>No comments yet.</p>
 {% endfor %} {% if user.is_authenticated %}
-<h4>Add a comment</h4>
-<form method="POST" action="{% url 'blog:add-comment' post.pk %}">
+<form method="POST" action="{% url 'blog:create-comment' post.pk %}">
   {% csrf_token %} {{ form.content }}
-  <button type="submit">Post Comment</button>
+  <button type="submit">Add a comment</button>
 </form>
 {% else %}
 <p><a href="{% url 'login' %}">Login</a> to comment.</p>
 {% endif %}
-<a href="{% url 'blog:post-list' %}">Back to posts</a>
+<a href="{% url 'blog:post-list' %}" class="back-link">Back to posts</a>
 {% endblock %}
