--- a/django_blog/blog/templates/blog/post_form.html
+++ b/django_blog/blog/templates/blog/post_form.html
@@ -1,10 +1,11 @@
 {% extends "blog/base.html" %}
+
 {% block title %}{% if form.instance.pk %}Edit Post{% else %}New Post{% endif %}{% endblock %}
 
 {% block content %}
-<h1>{% if form.instance.pk %}Edit Post{% else %}Create Post{% endif %}</h1>
+<h1>Create Post</h1>
 
-<form method="post">
+<form method="post" enctype="multipart/form-data">
   {% csrf_token %}
   {{ form.non_field_errors }}
   <div>
@@ -13,10 +14,14 @@
     {{ form.title.errors }}
   </div>
 
-  <div>
+  <div style="padding-top: 20px; padding-bottom: 20px;">
     {{ form.content.label_tag }}
     {{ form.content }}
     {{ form.content.errors }}
+  </div>
+  <label for="photo">Image:</label>
+  <div id="photo" style="padding-top: 7px; padding-bottom: 40px;">
+    {{ form.photo }}
   </div>
 
   <div>
@@ -25,6 +30,6 @@
   </div>
 
   <button type="submit">Save</button>
-  <a href="{% url 'blog:post-list' %}">Cancel</a>
+  <a href="{% url 'blog:post-list' %}"style="text-decoration: none; font-weight: bold; background-color: rgb(232, 114, 114); padding: 11px; border-radius: 10px; color: black; margin-left: 20px;">Cancel</a>
 </form>
 {% endblock %}
