--- a/django_blog/blog/templates/blog/register.html
+++ b/django_blog/blog/templates/blog/register.html
@@ -1,5 +1,10 @@
 {% extends "blog/base.html" %}
 
+{% load static %}
+{% block extra_css %}
+<link rel="stylesheet" href="{% static 'blog/css/register.css' %}">
+{% endblock %}
+
 {% block title %}Register{% endblock %}
 
 {% block content %}
@@ -11,7 +16,18 @@
     {% for field in form %}
         <div class="form-group">
             <label>{{ field.label }}</label>
-            {{ field }}
+
+            {% if field.name == "password1" or field.name == "password2" %}
+                <div class="password-wrapper">
+                    {{ field }}
+                    <span class="toggle-password" onclick="togglePassword(this)">
+                        👁️
+                    </span>
+                </div>
+            {% else %}
+                {{ field }}
+            {% endif %}
+
             {% if field.errors %}
                 <div class="error">
                     {{ field.errors }}
@@ -20,11 +36,25 @@
         </div>
     {% endfor %}
 
-    <button type="submit">Sign Up</button>
+    <button type="submit" class="submit-btn">Sign Up</button>
 </form>
 
-<p>
+<p class="auth-link">
     Already have an account?  
     <a href="{% url 'blog:login' %}">Login</a>
 </p>
+
+<script>
+function togglePassword(el) {
+    const input = el.previousElementSibling;
+    if (input.type === "password") {
+        input.type = "text";
+        el.textContent = "🙈";
+    } else {
+        input.type = "password";
+        el.textContent = "👁️";
+    }
+}
+</script>
+
 {% endblock %}
