--- a/django_blog/blog/templates/blog/post_detail.html
+++ b/django_blog/blog/templates/blog/post_detail.html
@@ -24,6 +24,15 @@
       By <a href="{% url 'blog:profile' username=post.author.username %}" class="link">{{ post.author.username }}</a> <br>
       <span class="post-date">{{ post.created_at|date:"F j, Y, g:i a" }}</span> 
     </p>
+    {% if post.tags.all|length %}
+        <p class="tags-section" style="font-size: small;">
+            {% for tag in post.tags.all %}
+                <a href="{% url 'blog:posts_by_tag' tag_slug=tag.slug %}" target="_blank">
+                    #{{ tag.name }} 
+                </a> 
+            {% endfor %}
+        </p>
+    {% endif %}
   </li>
 
 <hr />
@@ -42,18 +51,6 @@
   <a href="{% url 'blog:comment-delete' comment.pk %}">Delete</a>
   {% endif %}
 </div>
-{% empty %}
-<p class="tags-section">
-    <strong>Tags:</strong>
-    {% for tag in post.tags.all %}
-        <a href="{% url 'posts-by-tag' tag.name %}">
-            #{{ tag.name }}
-        </a>
-    {% empty %}
-        No tags
-    {% endfor %}
-</p>
-<p>No comments yet.</p>
 {% endfor %} {% if user.is_authenticated %}
 <form method="POST" action="{% url 'blog:create-comment' post.pk %}">
   {% csrf_token %} {{ form.content }}
