--- a/django_blog/blog/templates/blog/post_list.html
+++ b/django_blog/blog/templates/blog/post_list.html
@@ -13,8 +13,9 @@ All Posts
 
 <h1 class="page-title">Posts</h1>
 
-<form method="GET" action="{% url 'blog:search-posts' %}" class="search-form">
-  <input type="text" name="q" placeholder="Search posts..." />
+<form method="GET" class="search-form">
+  <input type="text" name="q" placeholder="Search posts..." 
+  value="{{ query }}"/>
   <button type="submit">Search</button>
 </form>
 
@@ -36,6 +37,15 @@ All Posts
       By <a href="{% url 'blog:profile' username=post.author.username %}" class="link">{{ post.author.username }}</a> <br>
       <span class="post-date">{{ post.created_at|date:"F j, Y, g:i a" }}</span> 
     </p>
+    {% if post.tags.all|length %}
+    <p class="tags-section" style="font-size: small;">
+        {% for tag in post.tags.all %}
+            <a href="{% url 'blog:posts_by_tag' tag_slug=tag.slug %}" target="_blank">
+                #{{ tag.name }}    
+            </a> &nbsp; 
+        {% endfor %}
+    </p>
+{% endif %}
   </li>
   {% empty %}
   <li>No posts yet.</li>` 
