--- a/django_blog/blog/templates/blog/posts_by_tag.html
+++ b/django_blog/blog/templates/blog/posts_by_tag.html
@@ -1,11 +1,18 @@
-<h2>Posts tagged with "{{ tag }}"</h2>
+{% extends "blog/base.html" %}
 
-{% for post in posts %}
-    <div>
-        <h3>
-            <a href="{% url 'post-detail' post.pk %}">{{ post.title }}</a>
-        </h3>
-    </div>
-{% empty %}
+{% block content %}
+<h2>Posts tagged with "{{ view.kwargs.tag_slug }}"</h2>
+
+<ul class="post-list">
+  {% for post in posts %}
+    <li>
+      <h3>
+        <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+      </h3>
+      <p>{{ post.content|truncatechars:200 }}</p>
+    </li>
+  {% empty %}
     <p>No posts found for this tag.</p>
-{% endfor %}
+  {% endfor %}
+</ul>
+{% endblock %}
